<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
 
    <groupId>TDT4100_project</groupId>
    <artifactId>tdt4100_v2023_prosjekt_boilerplate</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>jar</packaging>
 
    <name>tdt4100_v2023_prosjekt_boilerplate</name>

   <dependencies>

 	<dependency>
		<groupId>org.openjfx</groupId>
	  <artifactId>javafx-fxml</artifactId>
	  <version>19</version>
	</dependency>


	<!-- JUnit 5 -->
	<dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-engine</artifactId>
        <version>5.7.0</version>
	</dependency>
  </dependencies>

  <build>
	<plugins>
	  <plugin>
		<artifactId>maven-compiler-plugin</artifactId>
		<version>3.8.0</version>
		<configuration>
		  <release>17</release>
		</configuration>
	  </plugin>
	  <plugin>
		  <artifactId>maven-surefire-plugin</artifactId>
		  <version>3.0.0-M5</version>
		  <configuration>
			  <argLine>--enable-preview</argLine>
		  </configuration>
	  </plugin>
	  <plugin>
		  <artifactId>maven-failsafe-plugin</artifactId>
		  <version>3.0.0-M5</version>
		  <configuration>
			  <argLine>--enable-preview</argLine>
		  </configuration>
	  </plugin>

	</plugins>
  </build>
</project>